Added css for nav and fixed issues there

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,12 +8,8 @@
     <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
-    <nav id="js-primary-nav" style="display: flex; gap: 12px; padding: 8px 0">
-      <a href="/">Home</a>
-      <a href="/profiles" data-link>Profiles</a>
-      <a href="/posts" data-link>Posts</a>
-      <a href="/login" data-link>Login</a>
-      <a href="/register" data-link>Register</a>
+    <nav id="js-primary-nav" class="c-nav">
+      <div>Loading…</div>
     </nav>
 
     <main id="app-content">Loading…</main>
