Navbar fixed to be responsive and added bmenu

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
-    <nav id="js-primary-nav" class="c-nav">
+    <header id="js-primary-nav" class="l-header">
       <div>Loading…</div>
-    </nav>
+    </header>
 
     <main id="app-content">Loading…</main>
 
